# fungi

./: .gitignore  Cargo.toml  README.md  README.org  file.conf  makefile
escape/: Cargo.toml
exercism/: README.org
exercism/rust/accumulate/.exercism/: metadata.json
exercism/rust/accumulate/src/: lib.rs
exercism/rust/acronym/.exercism/: metadata.json
exercism/rust/acronym/src/: lib.rs
exercism/rust/all-your-base/.exercism/: metadata.json
exercism/rust/all-your-base/src/: lib.rs
exercism/rust/allergies/.exercism/: metadata.json
exercism/rust/allergies/src/: lib.rs
exercism/rust/alphametics/.exercism/: metadata.json
exercism/rust/alphametics/src/: lib.rs
exercism/rust/armstrong-numbers/.exercism/: metadata.json
exercism/rust/armstrong-numbers/src/: lib.rs
exercism/rust/atbash-cipher/.exercism/: metadata.json
exercism/rust/atbash-cipher/src/: lib.rs
exercism/rust/beer-song/.exercism/: metadata.json
exercism/rust/beer-song/src/: lib.rs
exercism/rust/binary-search/.exercism/: metadata.json
exercism/rust/difference-of-squares/: README.md
exercism/rust/grep/: Cargo.toml  README.md
exercism/rust/phone-number/: README.md
exercism/rust/proverb/: README.md
exercism/rust/pythagorean-triplet/: README.md
exercism/rust/reverse-string/: Cargo.toml
exercism/rust/scale-generator/: README.md
exercism/rust/simple-cipher/: README.md
exercism/rust/variable-length-quantity/: README.md
posts/: ch16-01-threads.org  const_fn.org  convenient_and_idiomatic_conversions.md  convenient_and_idiomatic_conversions.org  copy_mutable_state.org  crashing_a_hyper_server.org  derive_macro.org  designing_futures.org  difference_between_iter_and_into_iter.md  difference_between_iter_and_into_iter.org  effectively_using_iterators.md  effectively_using_iterators.org  error.e0507.org  errors_in_rust.org  exploring_function_overloading.org  fearless_concurrency.org  impl_trait.org  implicit_deref_coercions_with_functions_and_methods.md  implicit_deref_coercions_with_functions_and_methods.org  introducing_mir.md  introducing_mir.org  post.understanding_dijkstras_algorithm.org  references_and_lifetimes.org  rust.error.e0507.md  rust.error.e0507.org  rust_and_rest.md  rust_and_rest.org  session_types.org  stuff_the_identity_fuction_does.md  stuff_the_identity_fuction_does.org  the_question_mark_operator.md  the_question_mark_operator.org  three_algorithm_optimisations.org  to_owned.org  understanding_dijkstras_algorithm.org  writing_microservices.org
projects/echo/: Cargo.toml  README.md  README.org
projects/echo/src/: main.rs
projects/escape/: Cargo.toml
projects/escape/src/: main.rs
projects/futurez/: Cargo.toml
projects/futurez/src/: main.rs
projects/hello/: Cargo.toml  Makefile
projects/hello-world-derive/: Cargo.toml  README.md  README.org
projects/hello-world-derive/src/: lib.rs
projects/hello-world-derive/tests/: integration_test.rs
projects/hello/src/: lib.rs  main.rs
projects/hyperclient/: Cargo.toml
projects/hyperclient/src/: main.rs
projects/hyperserver/: Cargo.toml
projects/hyperserver/src/: main.rs
projects/llistz/: Cargo.toml  README.md  README.org
projects/llistz/src/: fifth.rs  fourth.rs  lib.rs  second.rs  six.rs  third.rs
projects/microservicers/: Cargo.toml  README.md
projects/microservicers/docker/: Dockerfile  Dockerfile-db
projects/microservicers/src/: main.rs
projects/minigrep/: Cargo.toml
projects/minigrep/src/: lib.rs  main.rs
projects/taker/: Cargo.toml  Makefile  README.org
projects/taker/config/: .taker.toml
projects/taker/src/: compress.rs  config.rs  lib.rs
projects/taker/src/compress/: mod.rs
projects/taker/src/config/: mod.rs
projects/taker/src/encrypter/: mod.rs
projects/taker/src/encrypter/progressbar/: mod.rs
projects/taker/src/encrypter/prompts/: getpass.rs  mod.rs
projects/taker/src/encrypter/samples/: mod.rs
projects/taker/src/progressbar/: mod.rs
projects/taker/src/timez/: mod.rs
projects/taker/src/walkers/: mod.rs
projects/timez/: Cargo.toml  README.org
projects/timez/src/: lib.rs
projects/tiny-ls/: Cargo.toml  README.md  README.org
projects/tiny-ls/src/: main.rs
scripts/: binary_heap.rs  borrow_self_mutable.rs  bubble.rs  channels_and_threads.rs  custom_to_iter.rs  deref_coercion.rs  dijkstra.rs  explicit_lifetime.rs  fizz_buzz.rs  function_overloading.rs  guess_game.rs  hanoi.rs  heaps_permutations.rs  hyper_either.rs  hyper_server.rs  is_balanced.rs  is_rotation.rs  lifetimes_on_struct_fields.rs  monte_carlo_pi.rs  monty_hall.rs  mutable_structs.rs  open_or_create.rs  print_option_struct.rs  pseudocode.org  read_file.rs  read_file_lines.rs  replace.rs  rotate_matrix.rs  sort_stack.rs  string_concatenations.rs  temperatures.rs  validate_numbers.rs
src/: advanced.rs  boxes_and_trees.rs  closures.rs  concurrency.rs  config.rs  enums.rs  error_propagation.rs  fibonacci.rs  formatting.rs  generics.rs  guess_game.rs  iterators.rs  letter_frequency.rs  lifetimes.rs  linked_lists.rs  main.rs  maps.rs  modules.rs  oop.rs  option.rs  ownership.rs  palindrome.rs  patterns.rs  pointers_and_refs.rs  pub_use.rs  ref_and_ampersand.rs  regexp.rs  smart_pointers.rs  state_machine.rs  strings.rs  structs.rs  testing.rs  to_string.rs  traits.rs  types.rs  valid_guess.rs  vectors.rs
(+147 files in other folders)
