[package]
name = "fungi"
version = "0.1.0"
authors = ["Edoardo Rossi <edd.rossi@gmail.com>"]

[dependencies]
# https://crates.io/crates/rand
rand = "0.4.0"
# https://github.com/rust-lang/regex
# https://crates.io/crates/regex
regex = "0.2"
# https://crates.io/crates/lazy_static
# https://github.com/rust-lang-nursery/lazy-static.rs
lazy_static = "1.0.0"
# https://github.com/rust-lang-nursery/rust-clippy
# clippy = "*"

# https://doc.rust-lang.org/cargo/
# The opt-level setting controls how many optimizations Rust will apply to your
# code, with a range of zero to three.
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
