[package]
name = "fungi"
version = "0.1.0"
authors = ["zeroed"]

[dependencies]
# https://crates.io/crates/rand
rand = "0.4.0"
# https://github.com/rust-lang/regex
# https://crates.io/crates/regex
regex = "0.2"
# https://crates.io/crates/lazy_static
# https://github.com/rust-lang-nursery/lazy-static.rs
lazy_static = "1.0.0"
# https://github.com/rust-lang-nursery/rust-clippy
# clippy = "*"
# https://github.com/rust-lang-nursery/futures-rs
# https://docs.rs/futures/0.1.18/futures/
futures = "0.1"
# https://github.com/tokio-rs/tokio
# https://docs.rs/tokio
tokio = "0.1"
tokio-io = "0.1"


# https://doc.rust-lang.org/cargo/
# The opt-level setting controls how many optimizations Rust will apply to your
# code, with a range of zero to three.
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
