[package]
name = "taker"
version = "0.1.0"
authors = ["Edoardo Rossi <edoardo.eddie.rossi@icloud.com>"]

[dependencies]
# https://github.com/rust-lang-nursery/log
log = "0.4.0"
# https://docs.rs/env_logger/*/env_logger/
env_logger = "0.5.6"
# https://github.com/chronotope/chrono
chrono = "0.4"
# https://github.com/kbknapp/clap-rs
clap = "2.31"
# https://github.com/rust-lang-nursery/rand
rand = "0.5.0-pre.0"
# https://github.com/alexcrichton/toml-rs
# https://docs.rs/toml/0.4.6/toml/
toml = "0.4"
# https://serde.rs/
# https://github.com/serde-rs/serde
serde = "1.0.38"
serde_derive = "1.0.38"
# https://github.com/alexcrichton/tar-rs
# https://docs.rs/tar/0.4.15/tar/
tar = "0.4.15"
# https://github.com/DaGenix/rust-crypto
rust-crypto = "0.2.36"
# https://github.com/RustCrypto/block-ciphers
# https://github.com/RustCrypto/block-ciphers/tree/master/twofish
block-cipher-trait = "0.5.0"
twofish = "0.1.0"
# https://crates.io/crates/ring
# https://briansmith.org/rustdoc/ring
# https://github.com/briansmith/ring
ring = "0.12.1"

# https://doc.rust-lang.org/cargo/reference/manifest.html#configuring-a-target
[[bin]]
name = "taker"
path = "bin/main.rs"
