[package]
name = "timez"
version = "0.1.0"
authors = ["zeroed"]

[dependencies]
# https://github.com/chronotope/chrono
chrono = "0.4"
# https://github.com/TeXitoi/structopt
structopt = "0.2"

# https://doc.rust-lang.org/cargo/reference/manifest.html#configuring-a-target
[[bin]]
name = "timez"
path = "bin/timez.rs"
